--- a/GoodFood/Search/View/SearchCell.xib
+++ b/GoodFood/Search/View/SearchCell.xib
@@ -9,58 +9,71 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="127" id="KGk-i7-Jjw" customClass="SearchCell" customModule="GoodFood" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="122"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="153" id="KGk-i7-Jjw" customClass="SearchCell" customModule="GoodFood" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="360" height="154"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="122"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="360" height="154"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="ERs-IC-ygd">
-                        <rect key="frame" x="125" y="5" width="185" height="112"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="knx-og-pIJ">
+                        <rect key="frame" x="10" y="21" width="340" height="111"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5B-ma-dgu">
-                                <rect key="frame" x="0.0" y="0.0" width="185" height="28"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сложность" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2zL-hr-kGZ">
-                                <rect key="frame" x="0.0" y="28" width="185" height="28"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Время" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUY-ob-8H2">
-                                <rect key="frame" x="0.0" y="56" width="185" height="28"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPI-sq-Qef">
-                                <rect key="frame" x="0.0" y="84" width="185" height="28"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QIj-Yc-UUs">
+                                <rect key="frame" x="0.0" y="0.0" width="110" height="111"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="110" id="A51-wP-H18"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="ERs-IC-ygd">
+                                <rect key="frame" x="118" y="0.0" width="222" height="111"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c5B-ma-dgu">
+                                        <rect key="frame" x="0.0" y="0.0" width="222" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Сложность" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2zL-hr-kGZ">
+                                        <rect key="frame" x="0.0" y="33" width="222" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="7Fc-eJ-MPU"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Время" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUY-ob-8H2">
+                                        <rect key="frame" x="0.0" y="62" width="222" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="0El-I0-1we"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPI-sq-Qef">
+                                        <rect key="frame" x="0.0" y="91" width="222" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="WPS-6c-Lai"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                    </stackView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QIj-Yc-UUs">
-                        <rect key="frame" x="10" y="12" width="100" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="100" id="R67-XT-uD9"/>
-                            <constraint firstAttribute="width" constant="100" id="vTI-sv-0cd"/>
+                            <constraint firstAttribute="height" constant="111" id="vdk-bz-bQx"/>
                         </constraints>
-                    </imageView>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="QIj-Yc-UUs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Gmy-85-tD9"/>
-                    <constraint firstItem="ERs-IC-ygd" firstAttribute="leading" secondItem="QIj-Yc-UUs" secondAttribute="trailing" constant="15" id="Pno-hC-QN4"/>
-                    <constraint firstAttribute="trailing" secondItem="ERs-IC-ygd" secondAttribute="trailing" constant="10" id="ZYg-5j-Ikg"/>
-                    <constraint firstItem="ERs-IC-ygd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="cpL-4o-vNP"/>
-                    <constraint firstAttribute="bottom" secondItem="QIj-Yc-UUs" secondAttribute="bottom" constant="10" id="gJp-Ui-e8z"/>
-                    <constraint firstAttribute="bottom" secondItem="ERs-IC-ygd" secondAttribute="bottom" constant="5" id="rw1-mp-oAg"/>
-                    <constraint firstItem="QIj-Yc-UUs" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="xL2-wB-8Hs"/>
+                    <constraint firstItem="knx-og-pIJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="0Bo-Ih-x1f"/>
+                    <constraint firstAttribute="trailing" secondItem="knx-og-pIJ" secondAttribute="trailing" constant="10" id="4l9-DE-isz"/>
+                    <constraint firstAttribute="bottom" secondItem="knx-og-pIJ" secondAttribute="bottom" constant="21" id="WbO-R8-6FY"/>
+                    <constraint firstItem="knx-og-pIJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="XOf-r1-KXV"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -71,7 +84,7 @@
                 <outlet property="rating" destination="LPI-sq-Qef" id="Xgy-s2-yWV"/>
                 <outlet property="time" destination="VUY-ob-8H2" id="2tn-u0-tXD"/>
             </connections>
-            <point key="canvasLocation" x="44.927536231884062" y="89.732142857142847"/>
+            <point key="canvasLocation" x="95.652173913043484" y="98.4375"/>
         </tableViewCell>
     </objects>
 </document>
